Improve layout of sponsorship section.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -192,47 +192,82 @@
       <div class="sponsors">
         <ul>
           <li>
-            <div>
-              <a href="https://www.teachfirst.org.uk" target="_blank">
-                <img src="img/sponsors/TeachFirst.png" />
-              </a>
-            </div>
-            <p>
-              Teach First is a social enterprise which aims to address educational disadvantage in
-              England and Wales. Teach First coordinates an employment-based teaching training
-              programme whereby participants achieve Qualified Teacher Status through the
-              participation in a two-year training programme that involves the completion of a
-              PGCE along with wider leadership skills training and an optional master's degree.
-            </p>
-          </li>
-          <li>
-            <div>
+            <div class="image">
               <a href="http://kef.com" target="_blank">
                 <img src="img/sponsors/KEF.png" />
               </a>
             </div>
-            <p>
-              KEF, a leader in loudspeaker design &amp; technology, has a reputation as the
-              ultimate loudspeaker manufacturer. From class-leading, hi-fi stereo speakers to
-              state-of-the-art portable wireless speakers and headphones, KEF is introducing a
-              fresh generation to the possibility of experiencing sound in a whole new way—exactly
-              as the original artist intended. Get the most out of your music with KEF’s
-              award-winning models which combine state-of-the-art industrial design and
-              class-leading sound performance.
-            </p>
+            <div class="blurb">
+              <p>
+                KEF, a leader in loudspeaker design &amp; technology, has a reputation as the
+                ultimate loudspeaker manufacturer. From class-leading, hi-fi stereo speakers to
+                state-of-the-art portable wireless speakers and headphones, KEF is introducing a
+                fresh generation to the possibility of experiencing sound in a whole new way—exactly
+                as the original artist intended. Get the most out of your music with KEF’s
+                award-winning models which combine state-of-the-art industrial design and
+                class-leading sound performance.
+              </p>
+            </div>
           </li>
           <li>
-            <div>
+            <div class="image">
+              <a href="https://www.teachfirst.org.uk" target="_blank">
+                <img src="img/sponsors/TeachFirst.png" />
+              </a>
+            </div>
+            <div class="blurb">
+              <p>
+                Teach First is a social enterprise which aims to address educational disadvantage in
+                England and Wales. Teach First coordinates an employment-based teaching training
+                programme whereby participants achieve Qualified Teacher Status through the
+                participation in a two-year training programme that involves the completion of a
+                PGCE along with wider leadership skills training and an optional master's degree.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="image">
               <a href="http://www.barnesconstruction.co.uk/" target="_blank">
                 <img src="img/sponsors/Barnes.png" />
               </a>
             </div>
-            <p>
-              As the construction division of The Barnes Group, Barnes Construction undertake a
-              wide range of projects for clients both in the East of England and throughout the
-              UK delivering projects to a high standard in the shortest timeframes, providing
-              value for money and a good all round construction experience. 
-            </p>
+            <div class="blurb">
+              <p>
+                Barnes Construction is a family-run organisation, started by David Barnes in 1978;
+                it is the construction division of the Barnes Group Ltd.
+              </p>
+
+              <p>
+                Barnes Construction offers a comprehensive, professional, construction service
+                throughout both the eastern region and the wider UK. It has always worked hard
+                to maintain a reputation as a highly knowledgeable, non-adversarial, effective
+                and friendly contractor, establishing itself as a client-focused building
+                contractor, completing a wide range of prestigious contracts for blue chip and
+                repeat business clients; many of which have been undertaken for the
+                colleges and universities of Cambridge.
+              </p>
+
+              <p>
+                The business continues to develop through managed growth, whilst retaining its
+                core family values of honesty, respect and tolerance. It prides itself on
+                the support it gives to the local community and was one of the first businesses
+                in the UK to receive the Trading for Good Responsible Business Award.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="image">
+              <a href="https://www.drinkcranes.co.uk/" target="_blank">
+                <img src="img/sponsors/Cranes.png" />
+              </a>
+            </div>
+            <div class="blurb">
+              <p>
+                CRANES is a refreshingly crisp cranberry cider, available in three delicious
+                flavours; Cranberry &amp; Lime, Raspberry &amp; Pomegranate
+                and Blueberry &amp; Apple.
+              </p>
+            </div>
           </li>
         </ul>
       </div>
